--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -19,7 +19,7 @@
   <script
     src="https://www.paypal.com/sdk/js?client-id=AXbOYtF6ughF4-H1Q7-QUjnwEAI_pjqurdurCIeGj74lUwQPwkV3ww_1DXktOy5WNcDAHabPs17_8B1J&currency=USD"></script>
 
-  <title>React App</title>
+  <title>Jata Market</title>
 </head>
 
 <body>
